Three files for default names. (Commercial, Industrial, Office) Adhere to 32 character limit on building names. Removed unneeded debug statements

--- a/WufireNameGenerator/WufireNameGenerator.csproj
+++ b/WufireNameGenerator/WufireNameGenerator.csproj
@@ -67,7 +67,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DefaultBusinessNames.json">
+    <EmbeddedResource Include="DefaultCommercialNames.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DefaultIndustryNames.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DefaultOfficeNames.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
